--- a/Custom_Container_Files/Configuration1/compose.yml
+++ b/Custom_Container_Files/Configuration1/compose.yml
@@ -19,7 +19,7 @@ services:
       - 3389:3389/tcp
       - 3389:3389/udp
     volumes:
-      - ./windows:/storage
-      - ./example:shared
+      - ./windows:/storage:Z
+      - ./example:/shared:Z
     restart: always
     stop_grace_period: 2m
